--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
+    "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "sass": "^1.50.0",
     "styled-components": "^5.3.5",
-    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.4.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
