--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "sass": "^1.50.0",
     "styled-components": "^5.3.5",
     "sweetalert2": "^11.4.8",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
